--- a/css/cortanaCar.css
+++ b/css/cortanaCar.css
@@ -151,7 +151,7 @@
     background-repeat: no-repeat;
 }
 
-table.factGroup {
+table.factSet {
     margin: 20px 0px 0px 0px;
     border-width: 0px;
     border-spacing: 0px;
@@ -159,11 +159,11 @@ table.factGroup {
     border-collapse: collapse;
 }
 
-tr.factGroupRowSpacer {
+tr.factSetRowSpacer {
     height: 10px;
 }
 
-td.factName {
+td.factTitle {
     border-width: 0px;
     padding: 0px;
     border-style: none;
@@ -180,7 +180,7 @@ td.factValue {
     padding: 0px 0px 0px 10px
 }
 
-.imageGallery {
+.imageSet {
     margin: 20px 0px 0px 0px;
 }
 
@@ -189,11 +189,11 @@ td.factValue {
     margin: 5px 0px 5px 0px;
 }
 
-.actionGroup {
+.actionSet {
     margin: 20px 0px 0px 0px;
 }
 
-.columnGroup {
+.columnSet {
     margin: 15px 0px 5px 0px;
 }
 
