--- a/WpfVisualizer/MainWindow.xaml
+++ b/WpfVisualizer/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfVisualizer"
+        xmlns:avalon="http://icsharpcode.net/sharpdevelop/avalonedit"
         xmlns:core="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d" Loaded="Window_Loaded" 
         Title="MainWindow" Height="1000" Width="1000">
@@ -13,7 +14,7 @@
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="Foreground" Value="DarkRed"/>
         </Style>
-        
+
         <Style x:Key="Hidden" TargetType="FrameworkElement">
             <Setter Property="Visibility" Value="Collapsed"/>
         </Style>
@@ -308,7 +309,9 @@
             <Button Name="speak" Click="speak_Click" Content="Speak" Margin="4"/>
         </StackPanel>
 
-        <TextBox Grid.Row="1" AcceptsReturn="True" AcceptsTab="True" Name="textBox" TextChanged="textBox_TextChanged"></TextBox>
+        <!--<TextBox Grid.Row="1" AcceptsReturn="True" AcceptsTab="True" Name="textBox" TextChanged="textBox_TextChanged"></TextBox>-->
+        <avalon:TextEditor Grid.Row="1" Name="textBox" SyntaxHighlighting="Json" FontFamily="Consolas" FontSize="10pt"
+                            ShowLineNumbers="true" TextChanged="textBox_TextChanged"/>
 
         <Border Margin="68,67,60,67"  CornerRadius="20" Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" >
             <Border.Effect>
@@ -316,7 +319,7 @@
             </Border.Effect >
             <Grid Name="cardGrid" Background="WhiteSmoke" MaxWidth="700" />
         </Border>
-        
+
         <Grid Grid.Row="2" Name="cardError" />
 
     </Grid>
