Implements most of the latest TODO list: - Moved parsing logic outside main class library - Added missing input types - Added placeholder for some input types - Removed Separator - Added Container.StartGroup - Removed CardElement.size - Added Container.selectAction and Image.selectAction (no associated visuals yet) - Updated OpenUrl and Http actions - Restored the built-in expand/collapse for Action.ShowCard

--- a/renderers/Html/css/bing.css
+++ b/renderers/Html/css/bing.css
@@ -24,34 +24,33 @@
     font-weight: normal;
 }
 
+.text.startParagraph {
+    padding: 10px 0px 0px 0px;
+}
+
 .text.defaultSize {
     font-size: 14px;
     margin: -5px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.small {
     font-size: 12px;
     margin: -4px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.medium {
     font-size: 20px;
     margin: -8px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.large {
     font-size: 24px;
     margin: -9px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.extraLarge {
     font-size: 30px;
     margin: -11px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.lighter {
@@ -120,6 +119,11 @@
     margin: 20px 0px 0px 0px;
 }
 
+.container.startGroup {
+    border-top: 1px solid #EEEEEE;
+    padding: 20px 0px 0px 0px;
+}
+
 .image {
     margin: 5px 0px 0px 0px;
 }
@@ -150,7 +154,7 @@
     background-repeat: no-repeat;
 }
 
-table.factSet {
+table.factGroup {
     margin: 20px 0px 0px 0px;
     border-width: 0px;
     border-spacing: 0px;
@@ -158,11 +162,11 @@ table.factSet {
     border-collapse: collapse;
 }
 
-tr.factSetRowSpacer {
+tr.factGroupRowSpacer {
     height: 10px;
 }
 
-td.factTitle {
+td.factName {
     border-width: 0px;
     padding: 0px;
     border-style: none;
@@ -179,20 +183,15 @@ td.factValue {
     padding: 0px 0px 0px 10px
 }
 
-.imageSet {
+.imageGallery {
     margin: 20px 0px 0px 0px;
 }
 
-.separator {
-    border-top: 1px solid #EEEEEE;
-    margin: 5px 0px 5px 0px;
-}
-
-.actionSet {
+.actionGroup {
     margin: 20px 0px 0px 0px;
 }
 
-.columnSet {
+.columnGroup {
     margin: 15px 0px 5px 0px;
 }
 
@@ -327,7 +326,7 @@ Other styles that can be specified:
     height: 72px;
 }
 
-.dateInput {
+.input.number {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -335,7 +334,15 @@ Other styles that can be specified:
     padding: 4px 8px 5px 8px;
 }
 
-.timeInput {
+.input.date {
+    font-family: 'Segoe UI', sans-serif;
+    border-color: #EAEAEA;
+    border-width: 1px;
+    border-style: solid;
+    padding: 4px 8px 5px 8px;
+}
+
+.input.time {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -351,16 +358,19 @@ Other styles that can be specified:
     padding: 4px 8px 6px 8px;
 }
 
-.input.toggleInput {
-    float: left;
+.toggleInput {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px;
 }
 
-.input.toggleInputLabel {
-    font-family: 'Segoe UI', sans-serif;
-    font-size: 14px;
-    margin-top: -3px;
-    margin-left: 6px;
-    float: left;
+.toggleLabel {
+    margin-left: 6px ! important;
+    margin-right: 0px ! important;
+    margin-bottom: 0px ! important;
+    padding: 0px ! important;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 /*Bing Glpyh*/
