--- a/renderers/Html/css/toast.css
+++ b/renderers/Html/css/toast.css
@@ -24,6 +24,10 @@
     font-weight: normal;
 }
 
+.text.startParagraph {
+    padding: 10px 0px 0px 0px;
+}
+
 .text.small {
     font-size: 12px;
     margin: -4px 0px 5px 0px;
@@ -118,6 +122,11 @@
     margin: 15px 0px 0px 0px;
 }
 
+.container.startGroup {
+    border-top: 1px solid #464646;
+    padding: 15px 0px 0px 0px;
+}
+
 .image {
     margin: 5px 0px 0px 0px;
 }
@@ -148,7 +157,7 @@
     background-repeat: no-repeat;
 }
 
-table.factSet {
+table.factGroup {
     margin: 10px 0px 0px 0px;
     border-width: 0px;
     border-spacing: 0px;
@@ -156,11 +165,11 @@ table.factSet {
     border-collapse: collapse;
 }
 
-tr.factSetRowSpacer {
+tr.factGroupRowSpacer {
     height: 10px;
 }
 
-td.factTitle {
+td.factName {
     border-width: 0px;
     padding: 0px;
     border-style: none;
@@ -178,20 +187,15 @@ td.factValue {
     padding: 4px 0px 0px 10px;
 }
 
-.imageSet {
+.imageGallery {
     margin: 20px 0px 0px 0px;
 }
 
-.separator {
-    border-top: 1px solid #464646;
-    margin: 20px 0px 0px 0px;
-}
-
-.actionSet {
+.actionGroup {
     margin: 10px 0px 0px 0px;
 }
 
-.columnSet {
+.columnGroup {
     margin: 20px 0px 0px 0px;
 }
 
@@ -342,7 +346,7 @@ Other styles that can be specified:
     background-color: #0C0C0C;
 }
 
-.dateInput {
+.input.number {
     font-family: 'Segoe UI', sans-serif;
     border: 2px solid #797979;
     padding: 4px 8px 5px 8px;
@@ -350,12 +354,12 @@ Other styles that can be specified:
     color: white;
 }
 
-.dateInput:hover {
+.input.number:hover {
     border: 2px solid #A5A5A5;
     background-color: #0C0C0C;
 }
 
-.timeInput {
+.input.date {
     font-family: 'Segoe UI', sans-serif;
     border: 2px solid #797979;
     padding: 4px 8px 5px 8px;
@@ -363,7 +367,20 @@ Other styles that can be specified:
     color: white;
 }
 
-.timeInput:hover {
+.input.date:hover {
+    border: 2px solid #A5A5A5;
+    background-color: #0C0C0C;
+}
+
+.input.time {
+    font-family: 'Segoe UI', sans-serif;
+    border: 2px solid #797979;
+    padding: 4px 8px 5px 8px;
+    background-color: #131313;
+    color: white;
+}
+
+.input.time:hover {
     border: 2px solid #A5A5A5;
     background-color: #0C0C0C;
 }
@@ -381,14 +398,27 @@ Other styles that can be specified:
     background-color: #0C0C0C;
 }
 
-.input.toggleInput {
-    float: left;
+.toggleInput {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px;
 }
 
-.input.toggleInputLabel {
+.toggleInputLabel {
     font-family: 'Segoe UI', sans-serif;
     font-size: 14px;
     margin-top: -3px;
     margin-left: 6px;
-    float: left;
+
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.toggleLabel {
+    margin-left: 6px ! important;
+    margin-right: 0px ! important;
+    margin-bottom: 0px ! important;
+    padding: 0px ! important;
+    display: inline-block;
+    vertical-align: middle;
 }
