--- a/renderers/Html/css/skypeCard.css
+++ b/renderers/Html/css/skypeCard.css
@@ -36,34 +36,33 @@
     color: #fff;
 }
 
+.text.startParagraph {
+    padding: 10px 0px 0px 0px;
+}
+
 .text.defaultSize {
     font-size: 14px;
     margin: -5px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.small {
     font-size: 12px;
     margin: -4px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.medium {
     font-size: 20px;
     margin: -8px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.large {
     font-size: 24px;
     margin: -9px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.extraLarge {
     font-size: 40px;
     margin: -15px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.lighter {
@@ -130,6 +129,11 @@
     margin: 20px 0px 0px 0px;
 }
 
+.container.startGroup {
+    border-top: 1px solid #EEEEEE;
+    padding: 20px 0px 0px 0px;
+}
+
 .image {
     margin: 0px 0px 0px 0px;
 }
@@ -160,7 +164,7 @@
     background-repeat: no-repeat;
 }
 
-table.factSet {
+table.factGroup {
     margin: 20px 0px 0px 0px;
     border-width: 0px;
     border-spacing: 0px;
@@ -168,11 +172,11 @@ table.factSet {
     border-collapse: collapse;
 }
 
-tr.factSetRowSpacer {
+tr.factGroupRowSpacer {
     height: 10px;
 }
 
-td.factTitle {
+td.factName {
     border-width: 0px;
     padding: 0px;
     border-style: none;
@@ -189,20 +193,15 @@ td.factValue {
     padding: 0px 0px 0px 10px
 }
 
-.imageSet {
+.imageGallery {
     margin: 20px 0px 0px 0px;
 }
 
-.separator {
-    border-top: 1px solid #EEEEEE;
-    margin: 5px 0px 5px 0px;
-}
-
-.actionSet {
+.actionGroup {
     margin: 20px 0px 0px 0px;
 }
 
-/*.columnSet {
+/*.columnGroup {
     margin: 15px 0px 5px 0px;
 }*/
 
@@ -337,7 +336,7 @@ Other styles that can be specified:
     height: 72px;
 }
 
-.dateInput {
+.input.number {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -345,7 +344,15 @@ Other styles that can be specified:
     padding: 4px 8px 5px 8px;
 }
 
-.timeInput {
+.input.date {
+    font-family: 'Segoe UI', sans-serif;
+    border-color: #EAEAEA;
+    border-width: 1px;
+    border-style: solid;
+    padding: 4px 8px 5px 8px;
+}
+
+.input.time {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -361,16 +368,19 @@ Other styles that can be specified:
     padding: 4px 8px 6px 8px;
 }
 
-.input.toggleInput {
-    float: left;
+.toggleInput {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px;
 }
 
-.input.toggleInputLabel {
-    font-family: 'Segoe UI', sans-serif;
-    font-size: 14px;
-    margin-top: -3px;
-    margin-left: 6px;
-    float: left;
+.toggleLabel {
+    margin-left: 6px ! important;
+    margin-right: 0px ! important;
+    margin-bottom: 0px ! important;
+    padding: 0px ! important;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 /*Bot hexagon*/
