Add support for startGroup in ColumnSet

--- a/renderers/Html/css/teamsConnectorCard.css
+++ b/renderers/Html/css/teamsConnectorCard.css
@@ -204,6 +204,17 @@ td.factValue {
     width: 16px;    
 }
 
+.columnSpacer.startGroup {
+    width: 24px;    
+}
+
+.columnSeparator {
+    margin: 0 auto;
+    width: 0px;
+    height: 100%;
+    border-left: 1px solid #EEEEEE;
+}
+
 .actionCardContainer {
     margin: 16px -20px 0px -20px;
     padding: 16px 20px 16px 20px;
