Add Xml Attribute to support serialization to and from xml

--- a/WpfVisualizer/MainWindow.xaml
+++ b/WpfVisualizer/MainWindow.xaml
@@ -307,6 +307,8 @@
             <Button Name="loadButton" Click="loadButton_Click" Content="Load" Margin="4"/>
             <Button Name="viewImage" Click="viewImage_Click" Content="View as Image" Margin="4"/>
             <Button Name="speak" Click="speak_Click" Content="Speak" Margin="4"/>
+            <Button Name="toJson" Content="To JSON" Margin="4" Click="toJson_Click"/>
+            <Button Name="toXml" Content="To XML" Margin="4" Click="toXml_Click"/>
         </StackPanel>
 
         <!--<TextBox Grid.Row="1" AcceptsReturn="True" AcceptsTab="True" Name="textBox" TextChanged="textBox_TextChanged"></TextBox>-->
