--- a/renderers/Html/css/outlookConnectorCard.css
+++ b/renderers/Html/css/outlookConnectorCard.css
@@ -121,9 +121,21 @@
     margin: 20px 0px 0px 0px;
 }
 
+.container.selectable {
+    padding: 5px;
+}
+
+.container.selectable:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.container.selectable:active {
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
 .container.startGroup {
-    border-top: 1px solid #EEEEEE;
-    padding: 20px 0px 0px 0px;
+    border-top: 1px solid rgba(0, 0, 0, 0.25);
+    padding-top: 20px;
 }
 
 .actionCardContainer {
@@ -132,6 +144,10 @@
 
 .image {
     margin: 20px 0px 0px 0px;
+}
+
+.image.selectable {
+    cursor: pointer;
 }
 
 .image.autoSize {
@@ -202,6 +218,18 @@ td.factValue {
 }
 
 .column {
+}
+
+.column.selectable {
+    padding: 5px;
+}
+
+.column.selectable:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.column.selectable:active {
+    background-color: rgba(0, 0, 0, 0.15);
 }
 
 .columnSpacer {
