--- a/WpfVisualizer/MainWindow.xaml
+++ b/WpfVisualizer/MainWindow.xaml
@@ -82,7 +82,18 @@
         </Style>
 
         <!-- Separator Styling -->
-        <Style x:Key="Adaptive.Separator" TargetType="Separator">
+        <Style x:Key="Adaptive.Separator.Subtle" TargetType="Separator">
+            <Setter Property="Margin" Value="0,2,0,2"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Separator}">
+                        <Border BorderBrush="Transparent" BorderThickness="0" Height="1" SnapsToDevicePixels="true" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="Adaptive.Separator.Strong" TargetType="Separator">
             <Setter Property="Margin" Value="0,2,0,2"/>
         </Style>
 
