--- a/renderers/Html/css/cortanaCar.css
+++ b/renderers/Html/css/cortanaCar.css
@@ -2,6 +2,16 @@
     box-sizing: border-box;
 }
 
+.subtleSeparation {
+    padding: 20px 0px 0px 0px;
+}
+
+.strongSeparation {
+    border-top: 1px solid rgba(0, 0, 0, 0.25);
+    margin: 20px 0px 0px 0px;
+    padding: 20px 0px 0px 0px;
+}
+
 .cortanaLogo {
     width: 50px;
 }
@@ -32,10 +42,6 @@
     font-family: 'Segoe UI', sans-serif;
     font-size: 14px;
     font-weight: normal;
-}
-
-.text.startParagraph {
-    padding: 20px 0px 0px 0px;
 }
 
 .text.defaultSize {
@@ -232,19 +238,14 @@ td.factValue {
     background-color: rgba(0, 0, 0, 0.15);
 }
 
-.columnSpacer {
+.defaultColumnSeparator {
     width: 10px;    
 }
 
-.columnSpacer.startGroup {
-    width: 20px;    
-}
-
-.columnSeparator {
-    margin: 0 auto;
-    width: 0px;
-    height: 100%;
+.strongColumnSeparator {
     border-left: 1px solid #EEEEEE;
+    margin-left: 10px;
+    padding-left: 10px;
 }
 
 .actionCardContainer {
