--- a/renderers/Html/css/skypeCard.css
+++ b/renderers/Html/css/skypeCard.css
@@ -2,6 +2,16 @@
     box-sizing: border-box;
 }
 
+.subtleSeparation {
+    padding: 20px 0px 0px 0px;
+}
+
+.strongSeparation {
+    border-top: 1px solid rgba(0, 0, 0, 0.25);
+    margin: 20px 0px 0px 0px;
+    padding: 20px 0px 0px 0px;
+}
+
 .skypeContainer {
     display: flex;
     align-items: flex-start;
@@ -34,10 +44,6 @@
     font-size: 14px;
     font-weight: normal;
     color: #fff;
-}
-
-.text.startParagraph {
-    padding: 10px 0px 0px 0px;
 }
 
 .text.defaultSize {
@@ -236,19 +242,14 @@ td.factValue {
     background-color: rgba(0, 0, 0, 0.15);
 }
 
-.columnSpacer {
+.defaultColumnSeparator {
     width: 10px;    
 }
 
-.columnSpacer.startGroup {
-    width: 20px;    
-}
-
-.columnSeparator {
-    margin: 0 auto;
-    width: 0px;
-    height: 100%;
+.strongColumnSeparator {
     border-left: 1px solid #EEEEEE;
+    margin-left: 10px;
+    padding-left: 10px;
 }
 
 .actionCardContainer {
