--- a/renderers/Html/css/teamsConnectorCard.css
+++ b/renderers/Html/css/teamsConnectorCard.css
@@ -2,6 +2,16 @@
     box-sizing: border-box;
 }
 
+.subtleSeparation {
+    padding: 20px 0px 0px 0px;
+}
+
+.strongSeparation {
+    border-top: 1px solid rgba(0, 0, 0, 0.25);
+    margin: 20px 0px 0px 0px;
+    padding: 20px 0px 0px 0px;
+}
+
 .stretch {
     width: 100%;
 }
@@ -22,10 +32,6 @@
     font-family: 'Segoe UI', sans-serif;
     font-size: 14px;
     font-weight: normal;
-}
-
-.text.startParagraph {
-    padding: 20px 0px 0px 0px;
 }
 
 .text.small {
@@ -107,10 +113,6 @@
 
 .text.attentionColor {
     color: darkred;
-}
-
-.headerContainer {
-    padding: 16px 16px 0px 16px;
 }
 
 .rootContainer {
@@ -228,19 +230,14 @@ td.factValue {
     background-color: rgba(0, 0, 0, 0.15);
 }
 
-.columnSpacer {
-    width: 16px;    
+.defaultColumnSeparator {
+    width: 10px;    
 }
 
-.columnSpacer.startGroup {
-    width: 24px;    
-}
-
-.columnSeparator {
-    margin: 0 auto;
-    width: 0px;
-    height: 100%;
+.strongColumnSeparator {
     border-left: 1px solid #EEEEEE;
+    margin-left: 10px;
+    padding-left: 10px;
 }
 
 .actionCardContainer {
