--- a/css/teamsConnectorCard.css
+++ b/css/teamsConnectorCard.css
@@ -24,6 +24,10 @@
     font-weight: normal;
 }
 
+.text.startParagraph {
+    padding: 20px 0px 0px 0px;
+}
+
 .text.small {
     font-size: 12px;
     margin: -4px 0px 5px 0px;
@@ -117,8 +121,29 @@
     margin: 20px 0px 0px 0px;
 }
 
+.container.selectable {
+    padding: 5px;
+}
+
+.container.selectable:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.container.selectable:active {
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
+.container.startGroup {
+    border-top: 1px solid rgba(0, 0, 0, 0.25);
+    padding-top: 20px;
+}
+
 .image {
     margin: 20px 0px 0px 0px;
+}
+
+.image.selectable {
+    cursor: pointer;
 }
 
 .image.autoSize {
@@ -147,7 +172,7 @@
     background-repeat: no-repeat;
 }
 
-table.factSet {
+table.factGroup {
     margin: 20px 0px 0px 0px;
     border-width: 0px;
     border-spacing: 0px;
@@ -155,11 +180,11 @@ table.factSet {
     border-collapse: collapse;
 }
 
-tr.factSetRowSpacer {
+tr.factGroupRowSpacer {
     height: 10px;
 }
 
-td.factTitle {
+td.factName {
     border-width: 0px;
     padding: 0px;
     border-style: none;
@@ -176,28 +201,46 @@ td.factValue {
     padding: 0px 0px 0px 10px
 }
 
-.imageSet {
+.imageGallery {
     margin: 20px 0px 0px 0px;
 }
 
-.separator {
-    border-top: 1px solid #EEEEEE;
+.actionGroup {
     margin: 20px 0px 0px 0px;
 }
 
-.actionSet {
-    margin: 20px 0px 0px 0px;
-}
-
-.columnSet {
+.columnGroup {
     margin: 20px 0px 0px 0px;
 }
 
 .column {
 }
 
+.column.selectable {
+    padding: 5px;
+}
+
+.column.selectable:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.column.selectable:active {
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
 .columnSpacer {
     width: 16px;    
+}
+
+.columnSpacer.startGroup {
+    width: 24px;    
+}
+
+.columnSeparator {
+    margin: 0 auto;
+    width: 0px;
+    height: 100%;
+    border-left: 1px solid #EEEEEE;
 }
 
 .actionCardContainer {
@@ -316,7 +359,7 @@ Other styles that can be specified:
     height: 72px;
 }
 
-.dateInput {
+.input.number {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -324,7 +367,15 @@ Other styles that can be specified:
     padding: 4px 8px 5px 8px;
 }
 
-.timeInput {
+.input.date {
+    font-family: 'Segoe UI', sans-serif;
+    border-color: #EAEAEA;
+    border-width: 1px;
+    border-style: solid;
+    padding: 4px 8px 5px 8px;
+}
+
+.input.time {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -340,14 +391,17 @@ Other styles that can be specified:
     padding: 4px 8px 6px 8px;
 }
 
-.input.toggleInput {
-    float: left;
+.toggleInput {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px;
 }
 
-.input.toggleInputLabel {
-    font-family: 'Segoe UI', sans-serif;
-    font-size: 14px;
-    margin-top: -3px;
-    margin-left: 6px;
-    float: left;
+.toggleLabel {
+    margin-left: 6px ! important;
+    margin-right: 0px ! important;
+    margin-bottom: 0px ! important;
+    padding: 0px ! important;
+    display: inline-block;
+    vertical-align: middle;
 }
