--- a/renderers/Html/css/outlookConnectorCard.css
+++ b/renderers/Html/css/outlookConnectorCard.css
@@ -32,34 +32,8 @@
     font-family: 'Segoe UI', sans-serif;
     font-size: 14px;
     font-weight: normal;
+    margin-top: 20px;
 }
-
-/*
-.text.small {
-    font-size: 12px;
-    margin: -4px 0px 5px 0px;
-}
-
-.text.defaultSize {
-    font-size: 14px;
-    margin: -5px 0px 5px 0px;
-}
-
-.text.medium {
-    font-size: 20px;
-    margin: -6px 0px 5px 0px;
-}
-
-.text.large {
-    font-size: 24px;
-    margin: -9px 0px 5px 0px;
-}
-
-.text.extraLarge {
-    font-size: 30px;
-    margin: -11px 0px 5px 0px;
-}
-*/
 
 .text.small {
     font-size: 12px;
