--- a/source/dotnet/AdaptiveCards.Visualizer.WPF/MainWindow.xaml
+++ b/source/dotnet/AdaptiveCards.Visualizer.WPF/MainWindow.xaml
@@ -82,36 +82,32 @@
         </Style>
 
         <!-- Separator Styling -->
-        <Style x:Key="Adaptive.Separator" TargetType="Separator">
-            <Setter Property="Margin" Value="0,2,0,2"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Separator}">
-                        <Border BorderBrush="Transparent" BorderThickness="0" Height="1" SnapsToDevicePixels="true" />
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
+        <Style x:Key="Adaptive.Separator" TargetType="Grid">
+            <Setter Property="Margin" Value="0,8,0,8"/>
+            <Setter Property="Background" Value="Transparent"/>
         </Style>
 
         <!-- you can define per element seperator styles like this -->
-        <Style x:Key="Adaptive.Separator.TextBlock" TargetType="Separator" BasedOn="{StaticResource Adaptive.Separator}">
+        <Style x:Key="Adaptive.Separator.TextBlock" TargetType="Grid" BasedOn="{StaticResource Adaptive.Separator}">
         </Style>
 
-        <Style x:Key="Adaptive.Separator.Strong" TargetType="Separator">
-            <Setter Property="Margin" Value="0,3,0,3"/>
+        <Style x:Key="Adaptive.Separator.Strong" TargetType="Grid">
+            <Setter Property="Margin" Value="0,10,0,10"/>
+            <Setter Property="Background" Value="LightGray"/>
+            <Setter Property="Height" Value="1"/>
         </Style>
 
         <!-- VerticalSeparator Styling -->
-        <Style x:Key="Adaptive.VerticalSeparator"  TargetType="{x:Type Rectangle}" >
+        <Style x:Key="Adaptive.VerticalSeparator"  TargetType="{x:Type Grid}" >
             <Setter Property="Width" Value="1"/>
             <Setter Property="Margin" Value="8,0,8,0"/>
-            <Setter Property="Fill" Value="Transparent"/>
+            <Setter Property="Background" Value="Transparent"/>
         </Style>
 
-        <Style x:Key="Adaptive.VerticalSeparator.Strong" TargetType="{x:Type Rectangle}" >
+        <Style x:Key="Adaptive.VerticalSeparator.Strong" TargetType="{x:Type Grid}" >
             <Setter Property="Width" Value="1"/>
             <Setter Property="Margin" Value="10,0,10,0"/>
-            <Setter Property="Fill" Value="Gray"/>
+            <Setter Property="Background" Value="LightGray"/>
         </Style>
 
         <!-- Fact/FactSet Styling -->
